# llmax

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-backend.yml  publish-pypi  publish-pypi.yml
llmax/: __init__.py  __main__.py  client.py
llmax/clients/: __init__.py  clients.py  mistral.py  multi_ai_client.py
llmax/external_clients/: __init__.py  clients.py  exceptions.py  mistral.py  openai.py  whisper.py
llmax/llms/: __init__.py  fake.py  llm.py  models.py  prices.py  tokens.py  usage.py
llmax/llms/clients/: types.py
llmax/llms/clients/azure-mistral/: client.py
llmax/llms/clients/azure-openai/: aclient.py  client.py
llmax/messages/: __init__.py  message.py  messages.py
llmax/models/: __init__.py  deployment.py  fake.py  llm.py  models.py  providers.py
llmax/usage/: __init__.py  exceptions.py  prices.py  usage.py
llmax/utils/: __init__.py  logger.py
src/llmax/: __main__.py  tests_universal_client.py
src/llmax/clients/: multi_ai_client.py
src/llmax/external_clients/: __init__.py  anthropic.py  clients.py  cohere.py  eleven_labs.py  gemini.py  grok.py  meta.py  mistral.py  openai.py  openrouter.py  scaleway.py
src/llmax/external_clients/universal_client/: __init__.py  chat.py  chat_completion.py  chat_completion_chunk.py  chat_completion_message.py  chat_completion_message_old.py  chat_completion_message_param.py  client.py  completion_usage.py  completions.py
src/llmax/messages/: message.py  messages.py
src/llmax/models/: __init__.py  deployment.py  fake.py  models.py  providers.py
src/llmax/usage/: __init__.py  prices.py  tokens.py  usage.py
src/llmax/utils/: __init__.py  logger.py  types.py
tests/: test_anthropic_cache.py  test_models_registry.py  test_tokencount.py  test_usage.py
